Fix for bug 84564 (Content-Style-Type no longer working). r=dbaron, sr=attinasi, a=asa.